feat: add passkey authentication
